# nf-automation

./: .gitignore  CHANGELOG.md  GUI_GUIDE.md  GUI_IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  STRUCTURE.md  VALIDACAO_TAGS.md  ValidadorNFe.spec  build_exe.ps1  build_exe.sh  config.example.yaml  create_icon.py  install.ps1  install.sh  installer.iss  itens_gerados.txt  make_installer.ps1  pyproject.toml  requirements.txt  run.ps1  run_gui.py  test_gui.py  test_report_generation.py  test_tag_validation.py
src/nfe_validator/: __init__.py  __main__.py  calculator.py  cli.py  comparator.py  config.py  gui.py  models.py  parser.py  report.py  tag_validator.py  utils.py
tests/: test_calculator.py  test_comparator.py  test_parser_basic.py
tools/: analyze_excel.py  parse_all_xmls.py  test_report_item.py
