[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfe-ibs-cbs-validator"
version = "1.0.0"
description = "Validador em massa de XMLs de NF-e com foco em IBS/CBS (Reforma Tributária)"
authors = [
    {name = "Murilo Alapenha Soares", email = "murilo@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["nfe", "nf-e", "ibs", "cbs", "reforma tributária", "validação", "fiscal"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
nfe-validator = "nfe_validator.cli:main"

[project.urls]
Homepage = "https://github.com/muriloalapenhaSoares/nfe-ibs-cbs-validator"
Documentation = "https://github.com/muriloalapenhaSoares/nfe-ibs-cbs-validator#readme"
Repository = "https://github.com/muriloalapenhaSoares/nfe-ibs-cbs-validator"
Issues = "https://github.com/muriloalapenhaSoares/nfe-ibs-cbs-validator/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
